src/styles/layouts/_project.scss
@use "mq";

.project {
  &__content {
    > * {
      margin-top: 0;
    }
  }
  
  &__header {
    text-transform: uppercase;
  }

  &__title {
    a {
      display: inline-block;

      span {
        text-transform: uppercase;
        font-size: 66%;
        display: inline-block;
        transform: translateY(-0.12em);
      }

      &::before {
        content: "↑";
        display: inline-block;
        margin-left: 0.45em;
        margin-right: 0.25em;
        transform: rotate(45deg);
      }
    }
  }

  &__x {

  }

  &__details {
    font-size: 84%;
  }
}

/**
* Position the project gallery wrapper on project pages.
*
*/
body[data-view="project"] {
  section#projects {
    display: flex;
    gap: var(--gap-vertical);
    flex-direction: column;

    .section__content-wrapper {
      position: relative;
      flex-grow: 1;
      min-height: 16em;

      @include mq.mq($until: small) {
        left: -38vw;
        width: calc(38vw + 100%);
      }
    }

    .gallery {
      position: absolute;
      top: 0;
      left: 0; 
      right: 0;
      bottom: 0;
    }
  }

  .widget {
      //display: none;
  }

  section#about .section__content-wrapper {
    display: none;
  }
}

